--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+	<meta content="utf-8" http-equiv="encoding">
     <title>Adventure Game</title>
 </head>
+
 <body>
-    <canvas id="gameCanvas" width="800" height="600">
+    <canvas id="gameCanvas" width="800" height="600"></canvas>
+    <p id="debugText">Key count will be displayed here</p>
 
-    </canvas>
+    <script src="js/GraphicsCommon.js"></script>
+    <script src="js/ImageLoading.js"></script>
+    <script src="js/Warrior.js"></script>
+    <script src="js/World.js"></script>
+    <script src="js/Input.js"></script>
+    <script src="js/Main.js"></script>
 
-    
-    <script src="js/world.js"></script>
-    <script src="js/warrior.js"></script>
 </body>
 </html>
